# Melude

./: .hlint.yaml  CHANGELOG.md  LICENSE  Main.hs  cabal.project  flake.nix  melude.cabal
Melude/: List.hs  Monad.hs  NonEmptySeq.hs  Result.hs  ResultT.hs  ValidateT.hs
Melude/ResultT/: Internal.hs
Melude/StateT/: Strict.hs
Melude/ValidateT/: Internal.hs
